<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_android"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userInput"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxStrokeColor="@color/blue"
        app:startIconDrawable="@drawable/ic_user"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintVertical_bias="0.19"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:hint="@string/user"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/blue"
        app:startIconDrawable="@drawable/ic_password"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotPassword"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:gravity="end"
        android:textColor="@color/grey_one"
        android:fontFamily="@font/open_sans"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="Login"
        android:textColor="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/open_sans_bold"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signUp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="3dp"
        android:text="@string/signup"
        android:textColor="@color/grey_one"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:progressTint="@color/blue"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>